force-app/main/default/objects/CareProgramTeamMember/CareProgramTeamMember.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>