force-app/main/default/objects/CareProgramTeamMember/fields/eHS_CareProgramEndDate__c.field-meta.xml
<CustomField>
    <fullName>eHS_CareProgramEndDate__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>End Date for Care Program</description>
    <formula>CareProgram.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care Program End Date</label>
    <type>Date</type>
</CustomField>