force-app/main/default/objects/CareProgramTeamMember/fields/eHS_CareProgramStartDate__c.field-meta.xml
<CustomField>
    <fullName>eHS_CareProgramStartDate__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Start Date for Care Program</description>
    <formula>CareProgram.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care Program Start Date</label>
    <type>Date</type>
</CustomField>