force-app/main/default/objects/CareProgramTeamMember/fields/eHS_EndDate__c.field-meta.xml
<CustomField>
    <fullName>eHS_EndDate__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>End Date for Care Program</description>
    <formula>CareProgram.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>