force-app/main/default/objects/CareProgramTeamMember/fields/eHS_Source_System_Id__c.field-meta.xml
<CustomField>
    <fullName>eHS_Source_System_Id__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>This field is used as an external ID field to support integration and data migration</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Source System Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>