force-app/main/default/objects/CareProgramTeamMember/fields/eHS_Status__c.field-meta.xml
<CustomField>
    <fullName>eHS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>In transition</fullName>
            </value>
            <value>
                <fullName>In Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>