force-app/main/default/objects/CareProgramTeamMember/fields/ehs_TeamMemberRoleStartDate__c.field-meta.xml
<CustomField>
    <fullName>ehs_TeamMemberRoleStartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Applies to roles and panel facility.</inlineHelpText>
    <label>Role Start Date</label>
    <type>Date</type>
</CustomField>