force-app/main/default/objects/CareProgramTeamMember/validationRules/eHS_Account_can_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>eHS_Account_can_not_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( AccountId )</errorConditionFormula>
    <errorMessage>Associated Provider or Facility does not exist.</errorMessage>
</ValidationRule>